src/test/ui/lifetime-errors/ex3-both-anon-regions-earlybound-regions.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-earlybound-regions.rs:17:12
   |
13 | fn baz<'a, 'b, T>(x: &mut Vec<&'a T>, y: &T)
   |                               -----      -- these two types are declared with different lifetimes...
...
17 |     x.push(y);
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

